--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "WebSocket backend para sorteio de amigo secreto (TypeScript)",
   "main": "dist/server.js",
   "scripts": {
-    "build": "tsc",
+    "build": "npm install && tsc",
     "start": "node dist/server.js",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "lint": "eslint . --ext .ts"
