--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "socket.io": "^4.8.1",
     "ws": "^8.13.0"
   },
   "devDependencies": {
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.5.2",
     "@types/ws": "^8.5.4",
-    "eslint": "^8.47.0",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
-    "@typescript-eslint/parser": "^6.9.0"
+    "@typescript-eslint/parser": "^6.9.0",
+    "eslint": "^8.47.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.5.2"
   }
 }
