--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@upstash/redis": "^1.35.6",
+    "dotenv": "^17.2.3",
     "socket.io": "^4.8.1",
     "ws": "^8.13.0"
   },
